Implementing the DM & vm & im module